--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "axios": "^0.26.0",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.2.3",
     "next": "12.1.0",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
