register complete with validation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
@@ -17,8 +18,10 @@
     "mongoose": "^6.2.3",
     "next": "12.1.0",
     "next-connect": "^0.12.2",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.29.0"
   },
   "devDependencies": {
     "eslint": "8.9.0",
